--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-elements": "^2.0.2",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native": "0.62.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
